# Image-matching-2025

./: .gitignore  Makefile  README copy.md  README.md  Readme  Readme.md  Readme.txt  pyproject.toml  requirements.txt
docs/: architecture.md
notebooks/: original_imc_2025_submission.ipynb
scripts/: kaggle_bootstrap.sh  run_test_submission.sh  run_train_eval.sh
src/imc2025/: __init__.py  __main__.py  cli.py  config.py  datasets.py  pipeline.py  scoring.py  submission.py  types.py
src/imc2025/features/: global_descriptor.py  local.py
src/imc2025/matching/: lightglue.py  pairs.py
src/imc2025/reconstruction/: colmap.py
src/imc2025/utils/: image.py  logging.py
tests/: test_config.py  test_submission.py
